Attestation03
тесты на CustomerController и OptionController